# AutoSWE

./: .gitignore  CLAUDE.md  README.md  autoswe.py  cleanup.ps1  cleanup.sh  conftest.py  data_processor.py  poller.ps1  poller.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh  update.bat  update.ps1  update.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
autoswe/: __init__.py  cli.py
autoswe/commands/: parser.py  setup.py
autoswe/core/: config.py  error_utils.py  logging_utils.py  queue_store.py  redact.py  slug.py
autoswe/harness/: ask_user_question.py  coder.py  mcp_config.py  planner.py  prompts.py  reviewer.py  runner.py
config/: agent_prompt.txt  autoswe.env.example  harnesses.json  harnesses.json.example  repos.json.example  welcome_comment.txt
docs/codex/: app.md  (+24 more)
mcp_servers/: autoswe_comment_server.py  autoswe_inline_comment_server.py
scripts/: azure_test_issue.py  capture_api_fixtures.py  capture_azure_fixtures.py  capture_github_fixtures.py  capture_scenario.py  fetch_codex_docs.py  test_azure_live.py
tests/: conftest.py  git_fixtures.py  test_allowlist.py  test_api_contract.py  test_ask_user_question.py  test_azure_api.py  test_azure_live.py  test_azure_tracker.py  test_azure_vcs.py  test_backend_base.py  test_backend_capabilities.py  test_backend_factory.py  test_backend_parity.py  test_claude_runner.py  test_cli.py  test_coder_returns.py  test_codex_backend.py  test_codex_fake.py  test_codex_pricing.py  test_concurrency.py  test_config.py  test_data_processor.py  test_decide.py  test_dispatch_helpers.py  test_dispatch_status.py  test_drift_detection.py  test_emit.py  test_error_utils.py  test_fake_contract.py  test_fake_parity.py  test_git_scenarios.py  test_github_api.py  test_github_live.py  test_github_provider.py  test_lifecycle_labels.py  test_lifecycle_parse.py  test_logging.py  test_mcp_integration.py  test_no_field_drift.py  test_orch_run.py  (+26 more)
(+473 files in other folders)
