[project]
name = "autoswe"
version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -m \"not live\" --capture=sys"
markers = [
    "live: tests that hit live GitHub/Azure via PAT (skipped by default in CI)",
    "scenario: scenario-driven E2E tests using stateful fakes",
    "contract: API fixture contract tests (offline shape validation)",
    "transition: state-engine transition matrix tests (parametrised over providers)",
    "smoke: full poll cycle smoke tests across providers",
    "git_scenario: real-git fixture tests using GitWorld sandboxes",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["data", "logs", "running", "worktrees", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"tests/session_harness/*" = ["E402"]
